# mcfast

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: mac_x86.yml
demo/DemosForNico/ForNico_TestRuns/galaxy_0/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_1_blackholes_prograde.txt  galaxy_state_1_blackholes_retrograde.txt  galaxy_state_2_blackholes_retrograde.txt
demo/DemosForNico/ForNico_TestRuns/galaxy_1/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_1_blackholes_retrograde.txt  galaxy_state_2_blackholes_binary.txt  galaxy_state_2_blackholes_binary_gw.txt  galaxy_state_2_blackholes_prograde.txt
demo/DemosForNico/ForNico_TestRuns/galaxy_10/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_2_blackholes_prograde.txt  galaxy_state_2_blackholes_retrograde.txt
demo/DemosForNico/ForNico_TestRuns/galaxy_11/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_1_blackholes_retrograde.txt  galaxy_state_2_blackholes_binary.txt
demo/DemosForNico/ForNico_TestRuns/galaxy_12/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_2_blackholes_retrograde.txt
demo/DemosForNico/ForNico_TestRuns/galaxy_2/: galaxy_state_0_blackholes_unsort.txt  galaxy_state_1_blackholes_prograde.txt  galaxy_state_2_blackholes_binary.txt  (+1 more)
python/: benchmark_stars.py
src/: cubes.rs  lib.rs  merge_tree.rs  tau.rs
src/accelerants/: cubes.rs  gw.rs  kick.rs  luminosity.rs  mod.rs  powerlaw.rs  prograde.rs  spline.rs  star_mass.rs  tau.rs  torque.rs
v11_output/: .rustc_info.json  mcfast-0.1.3-cp311-cp311-macosx_11_0_arm64.whl
v11_output/release/: libmcfast.d
(+4987 files in other folders)
