[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "mcfacts_helper"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "notebook>=7.3.3",
]
[tool.maturin]
features = ["pyo3/extension-module"]
